--- a/scss/index.scss
+++ b/scss/index.scss
@@ -36,122 +36,112 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-}
-.wrapper1 .header {
-    height: 5%;
-    background: #ffffff;
-}
-.wrapper1 .section {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-.wrapper1 .section1 {
-    height: 30%;
-}
-.wrapper1 .section2 {
-    height: 50%;
-}
-.wrapper1 .section3 {
-    height: 20%;
-}
-/* .header部分 */
-.wrapper1 .header {
-    padding: 0 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.wrapper1 .header div span {
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 50px;
-    font-weight: normal;
-    font-stretch: normal;
-    letter-spacing: -1px;
-    color: #000000;
-}
-.wrapper1 .header div:nth-child(3) span {
-    letter-spacing: -3px;
-}
-
-/* .section1 */
-.wrapper1 .section1 {
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 110px;
-    font-weight: normal;
-    font-stretch: normal;
-    letter-spacing: -1px;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-/* .section1 */
-.wrapper1 .section2 {
-    border: 3px solid red;
-    position: relative;
-    top: -5vh;
-    padding: 60px 0;
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 50px;
-    letter-spacing: -1px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-/* .section2 */
-.wrapper1 .section2 div {
-    height: 20%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.wrapper1 .section2 div span {
-    width: 80%;
-    padding: 15px 0;
-    border-radius: 107px;
-    background: rgba(0, 0, 0, 0.3);
-    text-align: center;
-}
-/* .section3 */
-.wrapper1 .section3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.wrapper1 .section3 div:nth-child(1) img {
-    height: 80px;
-    margin-right: 20px;
-}
-.wrapper1 .section3 div:nth-child(2) {
-    width: 12em;
-    font-size: 42px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-}
-
-.wrapper1 .section3 div:nth-child(2) span {
-    font-size: 42px;
-    line-height: 1;
-    height: 1em;
-    overflow: hidden;
-    text-align: justify;
-}
-.wrapper1 .section3 div:nth-child(2) span::after {
-    content: '';
-    display: inline-block;
-    width: 100%;
-}
-.wrapper1 .section3 div:nth-child(2) .space {
-    height: 15px;
-}
-.wrapper1 .section3 div:nth-child(2) span:nth-child(3) {
-    font-size: 22px;
+    .header {
+        height: 5%;
+        background: #ffffff;
+        padding: 0 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        div {
+            span {
+                font-family: AdobeHeitiStd-Regular;
+                font-size: 50px;
+                font-weight: normal;
+                font-stretch: normal;
+                letter-spacing: -1px;
+                color: #000000;
+            }
+        }
+        div:nth-child(3) {
+            span {
+                letter-spacing: -3px;
+            }
+        }
+    }
+    .section {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        .section1 {
+            height: 30%;
+            font-family: AdobeHeitiStd-Regular;
+            font-size: 110px;
+            font-weight: normal;
+            font-stretch: normal;
+            letter-spacing: -1px;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .section2 {
+            height: 50%;
+            border: 3px solid red;
+            position: relative;
+            top: -5vh;
+            padding: 60px 0;
+            font-family: AdobeHeitiStd-Regular;
+            font-size: 50px;
+            letter-spacing: -1px;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            div {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                span {
+                    width: 80%;
+                    padding: 15px 0;
+                    border-radius: 107px;
+                    background: rgba(0, 0, 0, 0.3);
+                    text-align: center;
+                }
+            }
+        }
+        .section3 {
+            height: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            div:nth-child(1) {
+                img {
+                    height: 80px;
+                    margin-right: 20px;
+                }
+            }
+            div:nth-child(2) {
+                width: 12em;
+                font-size: 42px;
+                color: #fff;
+                display: flex;
+                flex-direction: column;
+                span {
+                    font-size: 42px;
+                    line-height: 1;
+                    height: 1em;
+                    overflow: hidden;
+                    text-align: justify;
+                }
+                span::after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
+                }
+                div.space {
+                    height: 15px;
+                }
+                span:nth-child(3) {
+                    font-size: 22px;
+                }
+            }
+        }
+    }
 }
 
 /* wrapper2 */
@@ -160,156 +150,144 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-}
-.wrapper2 .header {
-    height: 5%;
-    background: #ffffff;
-}
-.wrapper2 .section {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-.wrapper2 .section1 {
-    height: 25%;
-}
-.wrapper2 .section2 {
-    height: 45%;
-}
-.wrapper2 .section3 {
-    height: 10%;
-}
-.wrapper2 .section4 {
-    height: 20%;
-}
-/* .header部分 */
-.wrapper2 .header {
-    padding: 0 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.wrapper2 .header div span {
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 50px;
-    font-weight: normal;
-    font-stretch: normal;
-    letter-spacing: -1px;
-    color: #000000;
-}
-.wrapper2 .header div:nth-child(3) span {
-    letter-spacing: -3px;
-}
-/* section1*/
-.wrapper2 .section1 {
-    display: flex;
-    flex-direction: column;
-}
-.wrapper2 .section1 .navInfo {
-    height: 40%;
-    font-family: ZhenyanGB-Regular;
-    font-size: 58px;
-    color: #fff;
-    display: flex;
-    align-items: center;
-}
-.wrapper2 .section1 .navInfo span:nth-child(1) {
-    margin: 0 20px;
-}
-.wrapper2 .section1 .detail {
-    height: 60%;
-    font-family: PingFang-SC-Regular;
-    font-size: 38px;
-    color: #fff;
-    display: flex;
-    align-items: center;
-}
-.wrapper2 .section1 .detail span {
-    padding: 0 20px;
-    text-align: center;
-    line-height: 1.6;
-}
-/* section2*/
-.wrapper2 .section2 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.wrapper2 .section2 div {
-    width: calc(50% - 15px);
-    height: 50%;
-}
-.wrapper2 .section2 div:nth-child(2n + 1) {
-    margin-left: 30px;
-}
-.wrapper2 .section2 div.son1 {
-    border: 3px solid red;
-    width: calc(100% - 30px);
-    height: 75%;
-    margin: 0;
-}
-.wrapper2 .section2 div.son2 {
-    width: calc(100% - 30px);
-    font-family: PingFang-SC-Regular;
-    color: #fff;
-    font-size: 25px;
-    height: 25%;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    .header {
+        height: 5%;
+        background: #ffffff;
+        padding: 0 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        div {
+            span {
+                font-family: AdobeHeitiStd-Regular;
+                font-size: 50px;
+                font-weight: normal;
+                font-stretch: normal;
+                letter-spacing: -1px;
+                color: #000000;
+            }
+        }
+        div:nth-child(3) {
+            span {
+                letter-spacing: -3px;
+            }
+        }
+    }
+    .section {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        .section1 {
+            height: 25%;
+            display: flex;
+            flex-direction: column;
+            .navInfo {
+                height: 40%;
+                font-family: ZhenyanGB-Regular;
+                font-size: 58px;
+                color: #fff;
+                display: flex;
+                align-items: center;
+                span:nth-child(1) {
+                    margin: 0 20px;
+                }
+            }
+            .detail {
+                height: 60%;
+                font-family: PingFang-SC-Regular;
+                font-size: 38px;
+                color: #fff;
+                display: flex;
+                align-items: center;
+                span {
+                    padding: 0 20px;
+                    text-align: center;
+                    line-height: 1.6;
+                }
+            }
+        }
+        .section2 {
+            height: 45%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            div {
+                width: calc(50% - 15px);
+                height: 50%;
+            }
+            div:nth-child(2n + 1) {
+                margin-left: 30px;
+            }
+            div.son1 {
+                border: 3px solid red;
+                width: calc(100% - 30px);
+                height: 75%;
+                margin: 0;
+            }
+            div.son2 {
+                width: calc(100% - 30px);
+                font-family: PingFang-SC-Regular;
+                color: #fff;
+                font-size: 25px;
+                height: 25%;
+                margin: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+        .section3 {
+            height: 10%;
+            font-family: PingFang-SC-Regular;
+            text-align: center;
+            font-size: 38px;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+        }
+        .section3::before {
+            content: '';
+            flex-grow: 1;
+        }
+        .section4 {
+            height: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            div:nth-child(1) {
+                img {
+                    height: 80px;
+                    margin-right: 20px;
+                }
+            }
+            div:nth-child(2) {
+                width: 12em;
+                font-size: 42px;
+                color: #fff;
+                display: flex;
+                flex-direction: column;
+                span {
+                    font-size: 42px;
+                    line-height: 1;
+                    height: 1em;
+                    overflow: hidden;
+                    text-align: justify;
+                }
+                div.space {
+                    height: 15px;
+                }
+                span:nth-child(3) {
+                    font-size: 22px;
+                }
 
-/* .section3 */
-.wrapper2 .section3 {
-    font-family: PingFang-SC-Regular;
-    text-align: center;
-    font-size: 38px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-}
-.wrapper2 .section3::before {
-    content: '';
-    flex-grow: 1;
-}
-
-/* section4 */
-.wrapper2 .section4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.wrapper2 .section4 div:nth-child(1) img {
-    height: 80px;
-    margin-right: 20px;
-}
-.wrapper2 .section4 div:nth-child(2) {
-    width: 12em;
-    font-size: 42px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-}
-
-.wrapper2 .section4 div:nth-child(2) span {
-    font-size: 42px;
-    line-height: 1;
-    height: 1em;
-    overflow: hidden;
-    text-align: justify;
-}
-.wrapper2 .section4 div:nth-child(2) span::after {
-    content: '';
-    display: inline-block;
-    width: 100%;
-}
-.wrapper2 .section4 div:nth-child(2) .space {
-    height: 15px;
-}
-.wrapper2 .section4 div:nth-child(2) span:nth-child(3) {
-    font-size: 22px;
+                span::after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
 
 /* .wrapper3 */
@@ -318,112 +296,107 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-}
-.wrapper3 .header {
-    height: 5%;
-    background: #ffffff;
-}
-.wrapper3 .section {
-    position: relative;
+    .header {
+        height: 5%;
+        background: #ffffff;
+        padding: 0 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        div {
+            span {
+                font-family: AdobeHeitiStd-Regular;
+                font-size: 50px;
+                font-weight: normal;
+                font-stretch: normal;
+                letter-spacing: -1px;
+                color: #000000;
+            }
+        }
+        div:nth-child(3) {
+            span {
+                letter-spacing: -3px;
+            }
+        }
+    }
+    .section {
+        position: relative;
 
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-.wrapper3 .section1 {
-    height: 10%;
-}
-.wrapper3 .section2 {
-    height: 70%;
-    position: relative;
-}
-.wrapper3 .section3 {
-    height: 20%;
-}
-/* .header部分 */
-.wrapper3 .header {
-    padding: 0 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.wrapper3 .header div span {
-    font-family: AdobeHeitiStd-Regular;
-    font-size: 50px;
-    font-weight: normal;
-    font-stretch: normal;
-    letter-spacing: -1px;
-    color: #000000;
-}
-.wrapper3 .header div:nth-child(3) span {
-    letter-spacing: -3px;
-}
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        .section1 {
+            height: 10%;
+            display: flex;
+            align-items: center;
+            .navInfo {
+                height: 40%;
+                font-family: ZhenyanGB-Regular;
+                font-size: 58px;
+                color: #fff;
+                display: flex;
+                align-items: center;
+                span:nth-child(1) {
+                    margin: 0 20px;
+                }
+            }
+        }
+        .section2 {
+            height: 70%;
+            position: relative;
+            .section2Wrapper {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 105%;
+                border: 3px solid red;
+                display: flex;
+                flex-direction: column;
+                li {
+                    border: 1px solid black;
+                    height: 12.5%;
+                }
+            }
+        }
+        .section3 {
+            height: 20%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            div:nth-child(1) {
+                img {
+                    height: 80px;
+                    margin-right: 20px;
+                }
+            }
+            div:nth-child(2) {
+                width: 12em;
+                font-size: 42px;
+                color: #fff;
+                display: flex;
+                flex-direction: column;
+                span {
+                    font-size: 42px;
+                    line-height: 1;
+                    height: 1em;
+                    overflow: hidden;
+                    text-align: justify;
+                }
+                span:nth-child(3) {
+                    font-size: 22px;
+                }
 
-/* section1*/
-.wrapper3 .section1 {
-    display: flex;
-    align-items: center;
-}
-.wrapper3 .section1 .navInfo {
-    height: 40%;
-    font-family: ZhenyanGB-Regular;
-    font-size: 58px;
-    color: #fff;
-    display: flex;
-    align-items: center;
-}
-.wrapper3 .section1 .navInfo span:nth-child(1) {
-    margin: 0 20px;
-}
-/* .section2 */
-.wrapper3 .section2Wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 105%;
-    border: 3px solid red;
-    display: flex;
-    flex-direction: column;
-}
-.wrapper3 .section2Wrapper li {
-    border: 1px solid black;
-    height: 12.5%;
+                div.space {
+                    height: 15px;
+                }
+                span::after {
+                    content: '';
+                    display: inline-block;
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
 /* .section3 */
-.wrapper3 .section3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.wrapper3 .section3 div:nth-child(1) img {
-    height: 80px;
-    margin-right: 20px;
-}
-.wrapper3 .section3 div:nth-child(2) {
-    width: 12em;
-    font-size: 42px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-}
-
-.wrapper3 .section3 div:nth-child(2) span {
-    font-size: 42px;
-    line-height: 1;
-    height: 1em;
-    overflow: hidden;
-    text-align: justify;
-}
-.wrapper3 .section3 div:nth-child(2) span::after {
-    content: '';
-    display: inline-block;
-    width: 100%;
-}
-.wrapper3 .section3 div:nth-child(2) .space {
-    height: 15px;
-}
-.wrapper3 .section3 div:nth-child(2) span:nth-child(3) {
-    font-size: 22px;
-}
